fix header link overlap

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -124,7 +124,7 @@ div.links {
 }
 
 div.links a {
-    margin: 0 10px;
+    margin: 5px 10px;
 }
 
 div.toc {
